package Auxiliar.Projeteis;

public enum HitboxType {
    CIRCULAR,
    RECTANGULAR
}
