// Novo Arquivo: src/Auxiliar/TipoProjetil.java
package Auxiliar.Projeteis;

public enum TipoProjetil {
    JOGADOR, // Disparado pelo herói
    INIMIGO    // Disparado por um inimigo
}