package Modelo.Projeteis;

import Auxiliar.Projeteis.ProjetilTipo;
import Auxiliar.Projeteis.TipoProjetil;
import Modelo.Inimigos.Inimigo;
import java.util.List;

/**
 * @brief Projétil que, após um período inicial de inércia, persegue o inimigo
 *        mais próximo.
 */
public class ProjetilHoming extends Projetil {

    private enum HomingState {
        INERCIA,
        PERSEGUINDO
    }

    private HomingState estadoAtual = HomingState.INERCIA;

    private Inimigo alvo;
    private List<Inimigo> inimigosAlvo;
    private double taxaDeCurva = 0.1;

    private int TEMPO_INERCIA = 20;
    private int inertiaTimer = TEMPO_INERCIA;

    /**
     * @brief Construtor do projétil teleguiado.
     */
    public ProjetilHoming(String sNomeImagePNG) {
        super(sNomeImagePNG);
    }

    /**
     * @brief Configura o míssil para um novo disparo, reiniciando seu estado de
     *        perseguição.
     */
    public void resetHoming(double x, double y, double velocidadeGrid, double anguloInicial, TipoProjetil tipo,
            ProjetilTipo tipoDetalhado, List<Inimigo> inimigos) {
        super.reset(
                x,
                y,
                velocidadeGrid,
                anguloInicial,
                tipo,
                tipoDetalhado);

        this.estadoAtual = HomingState.INERCIA;
        this.alvo = null;
        this.inertiaTimer = TEMPO_INERCIA;
        this.inimigosAlvo = inimigos;
    }

    /**
     * @brief Atualiza a lógica do míssil, que transita de um estado de inércia para
     *        perseguição.
     */
    @Override
    public void atualizar() {
        if (!isActive())
            return;

        switch (estadoAtual) {
            case INERCIA:
                inertiaTimer--;
                if (inertiaTimer <= 0) {
                    estadoAtual = HomingState.PERSEGUINDO;
                }
                break;

            case PERSEGUINDO:
                if (inimigosAlvo != null && (alvo == null || !alvo.isActive() || !inimigosAlvo.contains(alvo))) {
                    encontrarAlvoMaisProximo(inimigosAlvo);
                }
                if (alvo != null) {
                    ajustarAnguloParaOAlvo();
                }
                break;
        }

        super.atualizar();
    }

    /**
     * @brief Ajusta suavemente o ângulo do projétil para que ele se vire em direção
     *        ao alvo.
     */
    private void ajustarAnguloParaOAlvo() {
        double anguloParaOAlvo = Math.atan2(alvo.getY() - this.y, alvo.getX() - this.x);
        double diferencaAngulo = anguloParaOAlvo - this.anguloRad;

        while (diferencaAngulo > Math.PI)
            diferencaAngulo -= 2 * Math.PI;
        while (diferencaAngulo < -Math.PI)
            diferencaAngulo += 2 * Math.PI;

        if (Math.abs(diferencaAngulo) > taxaDeCurva) {
            this.anguloRad += Math.signum(diferencaAngulo) * taxaDeCurva;
        } else {
            this.anguloRad = anguloParaOAlvo;
        }
    }

    /**
     * @brief Encontra o inimigo mais próximo do projétil para definir como alvo.
     */
    private void encontrarAlvoMaisProximo(List<Inimigo> inimigos) {
        double menorDistancia = Double.MAX_VALUE;
        Inimigo inimigoMaisProximo = null;

        for (Inimigo i : inimigos) {
            if (i.isActive()) {
                double distancia = Math.sqrt(Math.pow(i.getX() - this.x, 2) + Math.pow(i.getY() - this.y, 2));
                if (distancia < menorDistancia) {
                    menorDistancia = distancia;
                    inimigoMaisProximo = i;
                }
            }
        }
        this.alvo = inimigoMaisProximo;
    }

    /**
     * @brief Verifica se o projétil está ativo.
     */
    public boolean isActive() {
        return this.isActive;
    }
}